--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,6 +9,9 @@
     <dimen name="text_size_28">28dp</dimen>
     <dimen name="text_size_30">30dp</dimen>
 
+    <dimen name="text_size">16sp</dimen>
+    <dimen name="text_size_20">20sp</dimen>
+
     <!--Dimens for imageView-->
     <dimen name="img_dimen">120dp</dimen>
 
