--- a/app/src/main/res/layout/fragment_pokemon_list.xml
+++ b/app/src/main/res/layout/fragment_pokemon_list.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
-        android:layout_margin="@dimen/margin_16dp"
-        android:orientation="vertical">
+        android:layout_margin="@dimen/margin_16dp">
 
     <RelativeLayout
             android:id="@+id/container_labels"
@@ -50,14 +49,14 @@
     </RelativeLayout>
 
     <android.support.v7.widget.RecyclerView
-            android:id="@+id/recycler_pokemon"
-            android:name="com.vortigo.pokemonfinder.ui.pokemon.PokemonFragment"
+            android:id="@+id/pokemonRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layoutManager="android.support.v7.widget.LinearLayoutManager"
-            tools:context=".ui.pokemon.list.PokemonListFragment"
-            tools:listitem="@layout/fragment_pokemon"/>
+            tools:listitem="@layout/fragment_pokemon"
+            android:layout_below="@+id/container_labels"/>
 
+    <include android:id="@+id/progress_indicator" layout="@layout/progress_view"/>
 
-</LinearLayout>
+</RelativeLayout>
 
