Refactors in Adapter and Fragment of the Types Pokemon

--- a/app/src/main/res/layout/fragment_type_list.xml
+++ b/app/src/main/res/layout/fragment_type_list.xml
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.RecyclerView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/list"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragment_agencia"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/typesRecyclerView"
         android:name="com.vortigo.pokemonfinder.ui.pokemon.TypeFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
-        tools:context=".ui.pokemon.types.TypeFragment"
+        android:layout_margin="@dimen/margin_8dp"
         tools:listitem="@layout/fragment_type"/>
+
+    <include android:id="@+id/progress_indicator" layout="@layout/progress_view"/>
+
+</RelativeLayout>
+
+
