--- a/app/src/main/res/layout/fragment_type.xml
+++ b/app/src/main/res/layout/fragment_type.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:padding="@dimen/margin_8dp"
-              android:orientation="vertical">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:padding="@dimen/margin_8dp">
 
     <ImageView
-            android:id="@+id/img_type_pokemon"
-            android:layout_width="@dimen/img_dimen"
-            android:layout_height="@dimen/img_dimen"
-            android:layout_marginLeft="@dimen/margin_8dp"
-            android:layout_marginRight="@dimen/margin_8dp"
-            android:contentDescription="@string/app_name"/>
+        android:id="@+id/img_type_pokemon"
+        android:layout_width="@dimen/img_dimen"
+        android:layout_height="@dimen/img_dimen"
+        android:layout_marginLeft="@dimen/margin_8dp"
+        android:layout_marginRight="@dimen/margin_8dp"
+        android:contentDescription="@string/app_name"/>
 
     <TextView
-            android:id="@+id/txt_name_type"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:layout_margin="@dimen/margin_8dp"/>
+        android:id="@+id/txt_name_type"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:layout_below="@+id/img_type_pokemon"
+        android:layout_margin="@dimen/margin_8dp"/>
 
-</LinearLayout>
+</RelativeLayout>
