--- a/app/src/main/res/layout/fragment_type.xml
+++ b/app/src/main/res/layout/fragment_type.xml
@@ -14,10 +14,13 @@
 
     <TextView
         android:id="@+id/txt_name_type"
-        android:layout_width="wrap_content"
+        android:layout_width="80dp"
         android:layout_height="wrap_content"
         android:textAlignment="center"
         android:layout_below="@+id/img_type_pokemon"
+        android:textColor="@color/colorBlack"
+        android:textSize="@dimen/text_size"
+        android:textStyle="bold"
         android:layout_margin="@dimen/margin_8dp"/>
 
 </RelativeLayout>
