Refactor searchView in PokemonSearchActivity

--- a/app/src/main/res/layout/activity_select_pokemon.xml
+++ b/app/src/main/res/layout/activity_select_pokemon.xml
@@ -48,4 +48,6 @@
             android:background="@drawable/next"
             android:contentDescription="@string/app_name"/>
 
+    <include android:id="@+id/progress_indicator" layout="@layout/progress_view"/>
+
 </RelativeLayout>
