--- a/app/src/main/res/layout/activity_select_pokemon.xml
+++ b/app/src/main/res/layout/activity_select_pokemon.xml
@@ -7,14 +7,27 @@
         tools:context=".ui.trainer.SelectPokemonActivity"
         android:background="@drawable/bg">
 
+    <ImageView
+            android:id="@+id/img_arrow"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginStart="@dimen/margin_16dp"
+            android:layout_marginLeft="@dimen/margin_16dp"
+            android:layout_marginRight="@dimen/margin_32dp"
+            android:layout_marginEnd="@dimen/margin_16dp"
+            android:src="@drawable/ic_keyboard_arrow_left_white_24dp"
+            android:contentDescription="@string/app_name"/>
+
     <TextView
             android:id="@+id/txt_gretting"
             style="@style/text_white_big"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:layout_marginLeft="@dimen/margin_32dp"
             android:layout_marginRight="@dimen/margin_32dp"
-            android:layout_marginTop="90dp"
+            android:layout_below="@+id/img_arrow"
             android:text="@string/msg_select_gretting"/>
 
     <TextView
@@ -36,7 +49,7 @@
             android:layout_marginLeft="@dimen/margin_32dp"
             android:layout_marginRight="@dimen/margin_32dp"
             android:labelFor="@+id/txt_type_pokemon"
-            android:layout_below="@+id/txt_type_pokemon"/>
+            android:layout_below="@+id/txt_type_pokemon" android:clipChildren="false"/>
 
     <ImageView
             android:id="@+id/img_register_trainer"
