--- a/app/src/main/res/drawable/spinner_bg.xml
+++ b/app/src/main/res/drawable/spinner_bg.xml
@@ -3,8 +3,8 @@
     <item><layer-list>
         <item><shape>
             <gradient android:angle="90"
-                android:startColor="@color/colorAccent"
-                android:endColor="@color/colorAccent" />
+                android:startColor="@color/colorBlack"
+                android:endColor="@color/colorBlack" />
 
             <stroke android:width="5dp" android:color="@color/colorWhite" />
 
@@ -13,7 +13,7 @@
             <padding android:bottom="3dp" android:left="3dp" android:right="3dp" android:top="3dp" />
         </shape></item>
         <item>
-            <bitmap android:gravity="right" android:src="@drawable/ic_arrow_drop_down_white_24dp" />
+            <bitmap android:gravity="right" android:src="@drawable/ic_keyboard_arrow_down_white_24dp" />
         </item>
     </layer-list></item>
 </selector>
