--- a/app/src/main/res/layout/activity_register_trainer.xml
+++ b/app/src/main/res/layout/activity_register_trainer.xml
@@ -34,11 +34,13 @@
             android:labelFor="@+id/txt_name"
             android:inputType="textPersonName"
             android:singleLine="true"
-            android:layout_below="@+id/txt_name" android:importantForAutofill="no"
-            android:textColorLink="@color/colorWhite" android:layout_marginLeft="@dimen/margin_32dp"
-            android:layout_marginTop="@dimen/margin_32dp" android:layout_marginStart="@dimen/margin_32dp"
+            android:layout_below="@+id/txt_name"
+            android:layout_marginTop="@dimen/margin_32dp"
+            android:layout_marginLeft="@dimen/margin_32dp" android:layout_marginStart="@dimen/margin_32dp"
             android:layout_marginRight="@dimen/margin_32dp" android:layout_marginEnd="@dimen/margin_32dp"
-            android:layout_marginBottom="@dimen/margin_32dp" android:textStyle="bold"/>
+            android:layout_marginBottom="@dimen/margin_32dp"
+            android:backgroundTint="@color/colorWhite"
+            android:textStyle="bold"/>
 
     <ImageView
             android:id="@+id/img_goto_select"
