--- a/app/src/main/res/layout/activity_select_pokemon.xml
+++ b/app/src/main/res/layout/activity_select_pokemon.xml
@@ -49,7 +49,8 @@
             android:layout_marginLeft="@dimen/margin_32dp"
             android:layout_marginRight="@dimen/margin_32dp"
             android:labelFor="@+id/txt_type_pokemon"
-            android:layout_below="@+id/txt_type_pokemon" android:clipChildren="false"/>
+            android:layout_below="@+id/txt_type_pokemon" android:clipChildren="false"
+            android:backgroundTint="@color/colorWhite"/>
 
     <ImageView
             android:id="@+id/img_register_trainer"
