--- a/app/src/main/res/layout/fragment_pokemon_list.xml
+++ b/app/src/main/res/layout/fragment_pokemon_list.xml
@@ -50,13 +50,19 @@
 
     </RelativeLayout>
 
+    <View android:id="@+id/divider"
+          android:layout_width="match_parent"
+          android:layout_height="1dp"
+          android:background="@color/white_overlay"
+          android:layout_below="@+id/container_labels"/>
+
     <android.support.v7.widget.RecyclerView
             android:id="@+id/pokemonRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layoutManager="android.support.v7.widget.LinearLayoutManager"
             tools:listitem="@layout/fragment_pokemon"
-            android:layout_below="@+id/container_labels"/>
+            android:layout_below="@+id/divider"/>
 
     <include android:id="@+id/progress_indicator" layout="@layout/progress_view"/>
 
