--- a/app/src/main/res/drawable/spinner_bg.xml
+++ b/app/src/main/res/drawable/spinner_bg.xml
@@ -2,18 +2,18 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item><layer-list>
         <item><shape>
-            <gradient android:angle="90"
-                android:startColor="@color/colorBlack"
-                android:endColor="@color/colorBlack" />
+            <!--<gradient android:angle="90"-->
+                <!--android:startColor="@color/colorBlack"-->
+                <!--android:endColor="@color/colorBlack" />-->
 
-            <stroke android:width="5dp" android:color="@color/colorWhite" />
+            <!--<stroke android:width="5dp" android:color="@color/colorWhite" />-->
 
             <corners android:radius="5dp" />
 
             <padding android:bottom="3dp" android:left="3dp" android:right="3dp" android:top="3dp" />
         </shape></item>
         <item>
-            <bitmap android:gravity="right" android:src="@drawable/ic_keyboard_arrow_down_white_24dp" />
+            <bitmap android:gravity="right" android:src="@drawable/ic_arrow_drop_down_white_24dp" />
         </item>
     </layer-list></item>
 </selector>
