--- a/app/src/main/res/layout/fragment_pokemon.xml
+++ b/app/src/main/res/layout/fragment_pokemon.xml
@@ -3,15 +3,13 @@
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
-      android:layout_marginLeft="@dimen/margin_8dp"
-      android:layout_marginRight="@dimen/margin_8dp">
+      android:padding="@dimen/margin_8dp">
 
     <ImageView
         android:id="@+id/img_pokemon"
         android:layout_width="@dimen/img_dimen_pokemon"
         android:layout_height="@dimen/img_dimen_pokemon"
         android:layout_margin="@dimen/margin_8dp"
-        android:background="@color/blue_500"
         android:scaleType="centerCrop"
         android:contentDescription="@string/app_name" />
 
