--- a/app/src/main/res/layout/fragment_pokemon.xml
+++ b/app/src/main/res/layout/fragment_pokemon.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:orientation="horizontal"
-      android:padding="@dimen/margin_8dp">
+      android:orientation="horizontal">
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/img_pokemon"
         android:layout_width="@dimen/img_dimen_pokemon"
         android:layout_height="@dimen/img_dimen_pokemon"
         android:layout_margin="@dimen/margin_8dp"
-        android:scaleType="centerCrop"
-        android:contentDescription="@string/app_name" />
+        app:civ_circle_background_color="@color/blue_500"/>
 
     <TextView
         android:id="@+id/txt_name_pokemon"
