--- a/app/src/main/res/layout/fragment_pokemon_list.xml
+++ b/app/src/main/res/layout/fragment_pokemon_list.xml
@@ -5,13 +5,13 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
-        android:layout_margin="@dimen/margin_16dp">
+        android:layout_marginLeft="@dimen/margin_16dp"
+        android:layout_marginRight="@dimen/margin_16dp">
 
     <RelativeLayout
             android:id="@+id/container_labels"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/margin_16dp">
+            android:layout_height="wrap_content">
 
             <TextView
                     android:id="@+id/txt_pokemon_title"
@@ -38,8 +38,8 @@
 
                 <ImageView
                         android:id="@+id/img_arrow"
-                        android:layout_width="20dp"
-                        android:layout_height="20dp"
+                        android:layout_width="@dimen/arraw_dim"
+                        android:layout_height="@dimen/arraw_dim"
                         android:layout_marginLeft="@dimen/margin_8dp"
                         android:layout_marginRight="@dimen/margin_8dp"
                         android:contentDescription="@string/app_name"
@@ -53,7 +53,8 @@
           android:layout_width="match_parent"
           android:layout_height="1dp"
           android:background="@color/white_overlay"
-          android:layout_below="@+id/container_labels"/>
+          android:layout_below="@+id/container_labels"
+          android:layout_marginBottom="@dimen/margin_8dp"/>
 
     <android.support.v7.widget.RecyclerView
             android:id="@+id/pokemonRecyclerView"
