--- a/app/src/main/res/layout/fragment_type.xml
+++ b/app/src/main/res/layout/fragment_type.xml
@@ -2,25 +2,25 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:padding="@dimen/margin_8dp">
+      android:background="@drawable/button_pressed"
+      android:layout_margin="@dimen/margin_8dp">
 
     <ImageView
         android:id="@+id/img_type_pokemon"
         android:layout_width="@dimen/img_dimen"
         android:layout_height="@dimen/img_dimen"
-        android:layout_marginLeft="@dimen/margin_8dp"
-        android:layout_marginRight="@dimen/margin_8dp"
+        android:layout_margin="@dimen/margin_8dp"
         android:contentDescription="@string/app_name"/>
 
     <TextView
         android:id="@+id/txt_name_type"
         android:layout_width="80dp"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
         android:layout_below="@+id/img_type_pokemon"
+        android:layout_margin="@dimen/margin_8dp"
+        android:gravity="center"
         android:textColor="@color/colorBlack"
         android:textSize="@dimen/text_size"
-        android:textStyle="bold"
-        android:layout_margin="@dimen/margin_8dp"/>
+        android:textStyle="bold"/>
 
 </RelativeLayout>
