--- a/app/src/main/res/menu/menu_pokemon_search.xml
+++ b/app/src/main/res/menu/menu_pokemon_search.xml
@@ -5,8 +5,8 @@
         <item android:id="@+id/action_search"
               android:icon="@android:drawable/ic_menu_search"
               android:title="@string/action_search"
-              app:showAsAction="always"
               android:orderInCategory="100"
+              app:showAsAction="always|collapseActionView"
               app:actionViewClass="android.support.v7.widget.SearchView"/>
 
 </menu>
