--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,13 +6,32 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
 
-        <!--<item name="windowActionBar">false</item>-->
-        <!--<item name="windowNoTitle">true</item>-->
+        <item name="searchViewStyle">@style/MySearchViewStyle</item>
     </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="MySearchViewStyle" parent="Widget.AppCompat.SearchView">
+        <!-- Background for the search query section (e.g. EditText) -->
+        <item name="queryBackground">@color/colorWhite</item>
+        <!--<item name="suggestionRowLayout">@layout/search_suggestion_row</item>-->
+        <!-- Background for the actions section (e.g. voice, submit) -->
+        <item name="submitBackground">@color/colorWhite</item>
+        <!-- Close button icon -->
+        <item name="closeIcon">@android:drawable/ic_menu_close_clear_cancel</item>
+        <!-- Search button icon -->
+        <item name="searchIcon">@android:drawable/ic_menu_search</item>
+        <!-- Go/commit button icon -->
+        <item name="goIcon">@android:drawable/ic_menu_close_clear_cancel</item>
+        <!-- Voice search button icon -->
+        <!--<item name="voiceIcon">...</item>-->
+        <!-- Commit icon shown in the query suggestion row -->
+        <!--<item name="commitIcon">...</item>-->
+        <!-- Layout for query suggestion rows -->
+        <!--<item name="suggestionRowLayout">...</item>-->
+    </style>
 
     <!--Style for TextView-->
     <style name="text_white_bold">
