--- a/app/src/main/res/layout/fragment_type.xml
+++ b/app/src/main/res/layout/fragment_type.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:app="http://schemas.android.com/apk/res-auto"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:background="@drawable/button_pressed"
+      android:elevation="4dp"
+      android:translationZ="6dp"
       android:layout_margin="@dimen/margin_8dp">
 
     <ImageView
@@ -13,14 +16,16 @@
         android:contentDescription="@string/app_name"/>
 
     <TextView
-        android:id="@+id/txt_name_type"
-        android:layout_width="80dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/img_type_pokemon"
-        android:layout_margin="@dimen/margin_8dp"
-        android:gravity="center"
-        android:textColor="@color/colorBlack"
-        android:textSize="@dimen/text_size"
-        android:textStyle="bold"/>
+            android:id="@+id/txt_name_type"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/img_type_pokemon"
+            app:autoSizeTextType="uniform"
+            android:gravity="center"
+            android:textColor="@color/colorBlack"
+            android:textSize="@dimen/text_size"
+            android:textStyle="bold" android:layout_marginTop="@dimen/margin_8dp"
+            android:layout_marginStart="@dimen/margin_8dp" android:layout_marginEnd="@dimen/margin_8dp"
+            android:layout_marginBottom="@dimen/margin_8dp"/>
 
 </RelativeLayout>
